--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,6 +1,6 @@
 FROM quay.io/sampandey001/secktor
-RUN git clone https://github.com/Theekshanamax/navi /root/Theekshanamax
-WORKDIR /root/Theekshanamax/
+RUN git clone https://github.com/SBtheekshana/king-x /root/SBtheekshana
+WORKDIR /root/SBtheekshana/
 RUN npm install npm@latest
 RUN npm install
 EXPOSE 8000
