--- a/package.json
+++ b/package.json
@@ -70,10 +70,10 @@
                     },
                  "repository": {
                  "type": "git",
-                 "url": "git+https://github.com/Theekshanamax/navi.git"
+                 "url": "git+https://github.com/SBtheekshana/king-x.git"
                   },
                  "bugs": {
-                 "url": "https://github.com/Theekshanamax/navi/issues"
+                 "url": "https://github.com/SBtheekshana/king-x/issues"
                   },
-                 "homepage": "https://github.com/Theekshanamax/navi#readme"
+                 "homepage": "https://github.com/SBtheekshana/king-x#readme"
                   }
