--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-               "name": "King-x",
-               "version": "0.0.1",
-               "description": "Multi device whatsapp bot by SamPandey001.",
+               "name": "Nithya",
+               "version": "0.0.2",
+               "description": "Multi device whatsapp bot ",
                "main": "lib/client.js",
                "type": "commonjs",
                "license": "GPL-3.0",
    "scripts": {
-                "start": "pm2 start lib/client.js --deep-monitoring --attach --name secktor",
-                "stop": "pm2 stop secktor"
+                "start": "pm2 start lib/client.js --deep-monitoring --attach --name dileepa",
+                "stop": "pm2 stop dileepa"
                 },
-               "author": "SamPandey001",
+               "author": "dileepa",
               "dependencies": {
-                       "@sampandey001/baileys": "latest", 
+                       "@whiskeysockets/baileys": "git+https://github.com/nipuna15/baileys", 
                        "@adiwajshing/keyed-db": "^0.2.4",
                        "awesome-phonenumber": "^3.3.0",
                        "anime-character-random": "latest",
+                       "@sl-code-lords/esana-news":"latest",
+                       "aptoide-scraper": "latest",
+                       "google-play-scraper": "latest",
                        "axios": "^0.24.0",
                        "cheerio": "^1.0.0-rc.10",
+"megajs":"latest",
                        "crypto-js":"latest",
                        "chalk": "^4.1.2",
                        "@hapi/boom": "^9.1.4",
@@ -34,6 +38,7 @@
                        "form-data": "^4.0.0",
                        "ffmpeg": "^0.0.4",
                        "fluent-ffmpeg": "^2.1.2",
+                       "fb-info-video": "^1.0.2",
                        "heroku-client": "3.1.0",
                        "async-g-i-s": "^1.4.0",
                        "human-readable": "^0.2.1",
@@ -54,11 +59,8 @@
                        "translatte": "^3.0.1",
                        "util": "^0.12.4",           
                        "secktor-pack": "latest",
-                       "ytdl-secktor": "git+ssh://git@github.com:khlevon/node-ytdl-core.git#v4.11.4-patch.2",
+                       "ytdl-secktor": "latest",
                        "pastebin-js": "latest",
-                       "fb-info-video":"^1.0.2",
-                       "private-scraper": "latest",
-                       "aptoide-scraper": "latest",
                        "wa-sticker-formatter": "^4.3.2"
                       },
                   "directories": {
@@ -70,10 +72,10 @@
                     },
                  "repository": {
                  "type": "git",
-                 "url": "git+https://github.com/SBtheekshana/king-x.git"
+                 "url": "git+https://github.com/DileepaTech/Queen-Nithya-MD.git"
                   },
                  "bugs": {
-                 "url": "https://github.com/SBtheekshana/king-x/issues"
+                 "url": "https://github.com/DileepaTech/Queen-Nithya-MD/issues"
                   },
-                 "homepage": "https://github.com/SBtheekshana/king-x#readme"
+                 "homepage": "https://github.com/DileepaTech/Queen-Nithya-MD#readme"
                   }
