--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
                     },
                  "repository": {
                  "type": "git",
-                 "url": "git+https://github.com/DileepaTech/Queen-Nithya-MD.git"
+                 "url": "git+https://github.com/SBtheekshana/king-x.git"
                   },
                  "bugs": {
-                 "url": "https://github.com/DileepaTech/Queen-Nithya-MD/issues"
+                 "url": "https://github.com/SBtheekshana/king-x/issues"
                   },
-                 "homepage": "https://github.com/DileepaTech/Queen-Nithya-MD#readme"
+                 "homepage": "https://github.com/SBtheekshana/king-x#readme"
                   }
