--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-               "name": "Nithya",
-               "version": "0.0.2",
-               "description": "Multi device whatsapp bot ",
+               "name": "secktor-md",
+               "version": "0.0.7",
+               "description": "Multi device whatsapp bot by SamPandey001.",
                "main": "lib/client.js",
                "type": "commonjs",
                "license": "GPL-3.0",
    "scripts": {
-                "start": "pm2 start lib/client.js --deep-monitoring --attach --name dileepa",
-                "stop": "pm2 stop dileepa"
+                "start": "pm2 start lib/client.js --deep-monitoring --attach --name secktor",
+                "stop": "pm2 stop secktor"
                 },
-               "author": "dileepa",
+               "author": "SamPandey001",
               "dependencies": {
-                       "@whiskeysockets/baileys": "git+https://github.com/nipuna15/baileys", 
+                       "@sampandey001/baileys": "latest", 
                        "@adiwajshing/keyed-db": "^0.2.4",
                        "awesome-phonenumber": "^3.3.0",
                        "anime-character-random": "latest",
-                       "@sl-code-lords/esana-news":"latest",
-                       "aptoide-scraper": "latest",
-                       "google-play-scraper": "latest",
                        "axios": "^0.24.0",
                        "cheerio": "^1.0.0-rc.10",
-"megajs":"latest",
                        "crypto-js":"latest",
                        "chalk": "^4.1.2",
                        "@hapi/boom": "^9.1.4",
@@ -38,7 +34,6 @@
                        "form-data": "^4.0.0",
                        "ffmpeg": "^0.0.4",
                        "fluent-ffmpeg": "^2.1.2",
-                       "fb-info-video": "^1.0.2",
                        "heroku-client": "3.1.0",
                        "async-g-i-s": "^1.4.0",
                        "human-readable": "^0.2.1",
@@ -61,6 +56,7 @@
                        "secktor-pack": "latest",
                        "ytdl-secktor": "latest",
                        "pastebin-js": "latest",
+                       "fb-info-video":"^1.0.2",
                        "wa-sticker-formatter": "^4.3.2"
                       },
                   "directories": {
@@ -72,10 +68,10 @@
                     },
                  "repository": {
                  "type": "git",
-                 "url": "git+https://github.com/SBtheekshana/king-x.git"
+                 "url": "git+https://github.com/SamPandey001/Secktor-Md.git"
                   },
                  "bugs": {
-                 "url": "https://github.com/SBtheekshana/king-x/issues"
+                 "url": "https://github.com/SamPandey001/Secktor-Md/issues"
                   },
-                 "homepage": "https://github.com/SBtheekshana/king-x#readme"
+                 "homepage": "https://github.com/SamPandey001/Secktor-Md#readme"
                   }
