--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-               "name": "secktor-md",
-               "version": "0.0.7",
+               "name": "king-x",
+               "version": "0.0.1",
                "description": "Multi device whatsapp bot by SamPandey001.",
                "main": "lib/client.js",
                "type": "commonjs",
