--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
                        "path": "^0.12.7",
                        "request": "^2.88.2",
                        "simple-git": "^3.16.1",
-                       "@shineiichijo/marika": "^2.0.3",           
+                       "@shineiichijo/marika": "^2.0.3",  
+                       "api-dylux": "latest",
+                       "@xct007/frieren-scraper": "latest",
+                       "@saipulanuar/tiktok-scraper-ts": "latest",           
                        "translatte": "^3.0.1",
                        "util": "^0.12.4",           
                        "secktor-pack": "latest",
